--- a/public/components/previewNav/previewNav.html
+++ b/public/components/previewNav/previewNav.html
@@ -21,42 +21,24 @@
         </div>
         
         <div class="nav-right">
-            <!-- 
-            <a href="/discover" class="nav-item nav-discover-old">
-                <div class="nav-icon-container">
-                    <img src="/assets/Butterfly2.png" alt="Profile" class="nav-icon-pic">
-                </div>
-                <span>Discover</span>
-            </a> 
-            -->
-
-            <a class="nav-item nav-profile">
-                <div class="nav-icon-container">
-                    <img src="/assets/Butterfly2.png" alt="Profile" class="nav-profile-pic">
-                </div>
-                <span>Me</span>
-            </a>
-
+            <!--
             <a href="/pages/navigate/navigate.html" class="nav-item nav-discover">
                 <div class="nav-icon-container">
                     <img src="/assets/Butterfly2.png" alt="Profile" class="nav-icon-pic">
                 </div>
-                <span>Discover</span>
-            </a>
-
-            <a href="/admin/console.html" class="nav-item nav-console">
-                <div class="nav-icon-container">
-                    <i class="fas fa-compass"></i>
-                </div>
-                <span>Add / Edit Trips</span>
+                <span>Join Cipher</span>
             </a>
 
             <a class="nav-item nav-logout">
                 <div class="nav-icon-container">
-                    <i class="fas fa-sign-out-alt"></i>
+                    <i class="fas fa-right-to-bracket"></i>
                 </div>
-                <span>Logout</span>
+                <span>Login</span>
             </a>
+            -->
+
+            <div class="preview-mode-text">PREVIEW MODE</div>
+
         </div>
     </div>
 </nav>
