--- a/public/components/nav/nav.html
+++ b/public/components/nav/nav.html
@@ -44,7 +44,7 @@
                 <span>Discover</span>
             </a>
 
-            <a href="/admin/console.html" class="nav-item nav-console">
+            <a href="/pages/console/console.html" class="nav-item nav-console">
                 <div class="nav-icon-container">
                     <i class="fas fa-compass"></i>
                 </div>
